fix redis connection issue